[gd_scene load_steps=12 format=3 uid="uid://cm6jia0t74bfo"]

[ext_resource type="PackedScene" uid="uid://c8qs28yry40um" path="res://scenes/animated_button.tscn" id="1_qwnig"]
[ext_resource type="Script" uid="uid://bya6xo7163h0u" path="res://scripts/main_menu.gd" id="1_yonvy"]
[ext_resource type="PackedScene" uid="uid://c2ptoo1hj5okl" path="res://scenes/game_camera.tscn" id="2_e2p27"]
[ext_resource type="PackedScene" uid="uid://bdirpb4p8dck1" path="res://scenes/clouds.tscn" id="3_ngj32"]
[ext_resource type="Texture2D" uid="uid://gk2l77x54geh" path="res://assets/tiles/tiles_packed.png" id="4_bm8t2"]
[ext_resource type="Theme" uid="uid://cwcw4wt01d6y0" path="res://resource/theme.tres" id="5_ngj32"]

[sub_resource type="Animation" id="Animation_ngj32"]
resource_name = "default"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_bm8t2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bm8t2"]
_data = {
&"RESET": SubResource("Animation_bm8t2"),
&"default": SubResource("Animation_ngj32")
}

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5d4ag"]
texture = ExtResource("4_bm8t2")
texture_region_size = Vector2i(18, 18)
0:9/0 = 0
0:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
1:9/0 = 0
1:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
2:9/0 = 0
2:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
3:9/0 = 0
3:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
4:9/0 = 0
4:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
4:10/0 = 0
4:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
3:10/0 = 0
3:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
2:10/0 = 0
2:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
2:11/0 = 0
2:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
1:11/0 = 0
1:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
1:10/0 = 0
1:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
0:11/0 = 0
0:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
0:10/0 = 0
0:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
16:1/size_in_atlas = Vector2i(1, 6)
16:1/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
3:7/0 = 0
3:6/0 = 0
2:7/0 = 0
2:6/0 = 0
1:6/0 = 0
1:7/0 = 0
0:7/0 = 0
0:6/0 = 0
0:5/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
3:3/0 = 0
2:3/0 = 0
1:3/0 = 0
0:3/0 = 0
3:2/0 = 0
2:2/0 = 0
1:2/0 = 0
0:2/0 = 0
0:1/0 = 0
1:1/0 = 0
1:0/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
4:0/0 = 0
5:0/0 = 0
5:1/0 = 0
3:0/0 = 0
2:0/0 = 0
0:0/0 = 0
14:1/size_in_atlas = Vector2i(1, 3)
14:1/0 = 0
15:1/size_in_atlas = Vector2i(1, 3)
15:1/0 = 0
18:5/size_in_atlas = Vector2i(2, 1)
18:5/0 = 0
18:4/size_in_atlas = Vector2i(2, 1)
18:4/0 = 0
17:3/size_in_atlas = Vector2i(3, 1)
17:3/0 = 0
17:0/size_in_atlas = Vector2i(3, 3)
17:0/0 = 0
16:0/0 = 0
17:4/size_in_atlas = Vector2i(1, 3)
17:4/0 = 0
18:6/size_in_atlas = Vector2i(2, 1)
18:6/0 = 0
14:4/0 = 0
13:4/0 = 0
14:5/0 = 0
13:5/0 = 0
15:4/size_in_atlas = Vector2i(1, 3)
15:4/0 = 0
12:6/size_in_atlas = Vector2i(3, 1)
12:6/0 = 0
13:7/size_in_atlas = Vector2i(3, 1)
13:7/0 = 0
5:7/0 = 0
7:6/0 = 0
6:6/0 = 0
5:6/0 = 0
7:4/0 = 0
8:4/0 = 0
4:6/0 = 0
4:7/0 = 0
11:3/0 = 0
11:2/0 = 0
4:5/0 = 0
8:6/0 = 0
6:1/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
12:2/0 = 0
13:2/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
12:3/0 = 0
13:3/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0

[sub_resource type="TileSet" id="TileSet_um6dh"]
tile_size = Vector2i(18, 18)
physics_layer_0/collision_layer = 1
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Grass and Dirt"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
sources/0 = SubResource("TileSetAtlasSource_5d4ag")

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_yonvy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_bm8t2")
}
autoplay = "default"

[node name="GameCamera" parent="." instance=ExtResource("2_e2p27")]
position = Vector2(163, 91)

[node name="Clouds" parent="GameCamera" instance=ExtResource("3_ngj32")]

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(159, 93)
tile_set = SubResource("TileSet_um6dh")
format = 2
layer_0/tile_data = PackedInt32Array(196603, 65536, 9, 196604, 65536, 9, 196605, 65536, 9, 196606, 65536, 9, 196607, 65536, 9, 131072, 65536, 9, 131073, 65536, 9, 131074, 65536, 9, 131075, 65536, 9, 131076, 65536, 9, 131077, 65536, 9, 131078, 131072, 9, 262137, 0, 10, 262138, 65536, 10, 262139, 65536, 10, 196612, 65536, 10, 196613, 65536, 10, 196614, 131072, 10, 262150, 131072, 10, 262149, 65536, 10, 262148, 65536, 10, 262147, 65536, 10, 262146, 65536, 10, 262145, 65536, 10, 262144, 65536, 10, 327679, 65536, 10, 327678, 65536, 10, 327677, 65536, 10, 327676, 65536, 10, 327675, 65536, 10, 327674, 65536, 10, 327673, 0, 10, 131069, 262144, 6, 65539, 262144, 6, 131065, 0, 9, 131066, 131072, 9, 196602, 196608, 10, 196601, 0, 10, -196616, 0, 9, -131080, 0, 10, -65544, 0, 11, -65543, 65536, 11, -65542, 65536, 11, -65541, 65536, 11, -65540, 65536, 11, -65539, 65536, 11, -65538, 131072, 11, -131075, 131072, 10, -196611, 131072, 9, -196612, 65536, 9, -196613, 65536, 9, -196614, 65536, 9, -196615, 65536, 9, -131079, 65536, 10, -131078, 65536, 10, -131077, 65536, 10, -131076, 65536, 10, 196611, 65536, 10, 196610, 65536, 10, 196609, 65536, 10, 196608, 65536, 10, 262143, 65536, 10, 262142, 65536, 10, 262141, 65536, 10, 262140, 65536, 10)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(160, 90)
theme = ExtResource("5_ngj32")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(112, 24)
layout_mode = 2

[node name="PlayButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("1_qwnig")]
layout_mode = 2
text = "PLAY
"

[node name="SettingButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("1_qwnig")]
layout_mode = 2
text = "SETTINGS

"

[node name="ExitButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("1_qwnig")]
layout_mode = 2
text = "EXIT
"

[node name="Node2D" type="Node2D" parent="."]
